# ook-zed-extension

./: .gitmodules  CLAUDE.md  Makefile  README.md
.github/workflows/: release.yml
agent/: Cargo.toml
agent/extension/: extension.toml
agent/src/: main.rs
bridge/: .dockerignore  Dockerfile  package-lock.json  package.json
bridge/src/: index.ts  logger.ts  process.ts  server.ts  telemetry.ts
docs/: IMPLEMENTATION_PLAN.md
extension/: extension.toml
